--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -12,7 +12,7 @@
   <header>
     <h1>[Idaho Rafting Rentals] Site Plan</h1>
     <h2>[Tavarez Julio]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h2>WDD 130-week2</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,11 +20,11 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Having great gear is one very importnat thing for rafting, but if you come to the idaho rafting rental we wont only give you top gear we will also show you some of the best fivers to take and tryto find a course equal to your level of rafting!]</p>
+    <p>Having great gear is one very importnat thing for rafting, but if you come to the idaho rafting rental we wont only give you top gear we will also show you some of the best fivers to take and tryto find a course equal to your level of rafting!</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[If you are a beginner at white water rafting we want to make sure you hava an amazing expiriance and have a desire to do it again with more friends. we also want ot help expirianced rafters find a course where they can find the thriling adventure they found the first time they went rafting. We have expirinaced tour guides who will guid and take care of you on each float if you so desire. We have floates for all types of expiriances. We do require kids to be of theage of 8 and older and wavers will need to be sighned for protection if under the age of 18 you must have a legal guardian sighn your for you and present with you on the float.]</p>
+    <p>If you are a beginner at white water rafting we want to make sure you hava an amazing expiriance and have a desire to do it again with more friends. we also want ot help expirianced rafters find a course where they can find the thriling adventure they found the first time they went rafting. We have expirinaced tour guides who will guid and take care of you on each float if you so desire. We have floates for all types of expiriances. We do require kids to be of theage of 8 and older and wavers will need to be sighned for protection if under the age of 18 you must have a legal guardian sighn your for you and present with you on the float.</p>
     <!-- change this -->
 
     <hr />
@@ -67,11 +67,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Raleway]
+      Heading Font: Raleway
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: mooli
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
