--- a/wwr/Ice-Challange-One.html
+++ b/wwr/Ice-Challange-One.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <main>
-        <div>Education</div>
+        <div class="title">Education</div>
 
         <q>"Education is the difference between wishing you could help others & being able to help them"</q>
-        <p>--President Nelson</p>
+        <q>--President Nelson</q>
 
         <div class="list">
             <ol>
@@ -26,6 +26,11 @@
 
          <p>Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</p>
 
+         <div class="LDS">
+            <p> Russell M. Nelson</p>
+            <p>President of the church of Jesus Christ of Latter -</p>
+            <p>day saints</p>
+         </div>
     </main>
 
 </body>
