--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,7 +14,7 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="wite-water-rafting-page-2.html">Riers</a>
+            <a href="wite-water-rafting-page-2.html">Rivers</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
