--- a/wwr/wite-water-rafting-page-2.html
+++ b/wwr/wite-water-rafting-page-2.html
@@ -3,12 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rivers</title>
+    <link rel="stylesheet" href="/styles/styles/white-water-rafting-rivers.css">
+    <title>Idaho Whitewater Rafting | Rivers</title>
 </head>
 <body>
     <header>
-        
+        <a id="logo_link" href="index.html">
+            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+        </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="wite-water-rafting-page-2.html">Rivers</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
+        </nav>
     </header>
-    
+
+
+    <div id = "hero">
+        <div id = "hero-box">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
+
+       </div>
+        <section id ="banner">
+           <h1 class="home-title">Rivers to Try</h1>
+           <h4>Book a tour guide</h4>
+           <div class="button-box">
+            <a class ="book" href="rates.html">Book Now</a>
+           </div>
+        </section>
+   </div>
+
+    <main>
+
+
+
+
+
+
+    </main>
+
+
+    <footer>
+        <p>Dry Oar &copy; 2023 - Julio Cesar Tavarez</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
