--- a/wwr/wite-water-rafting-page-2.html
+++ b/wwr/wite-water-rafting-page-2.html
@@ -23,13 +23,26 @@
     <div id = "hero">
         <div id = "hero-box">
             <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
+        </div>
 
-       </div>
         <section id ="banner">
-           <h1 class="home-title">Rivers to Try</h1>
-           <h4>Book a tour guide</h4>
-           <div class="button-box">
-            <a class ="book" href="rates.html">Book Now</a>
+            <h1 class="home-title">Rivers to Try</h1>
+            <div class = "river-grid">
+
+                <h2>Salmon River</h2>
+                <img src="images/salmon-river.jpg"
+                <p></p>
+                <div class="button-box">
+                    <a class ="book" href="rates.html">register</a>
+                </div>
+
+                <h2>Hells Canyon</h2>
+                <img src="images/hells Canyon.webp"
+                <p></p>
+                <div class="button-box">
+                    <a class ="book" href="rates.html">Register</a>
+                </div>
+
            </div>
         </section>
    </div>
