width of images

--- a/wwr/wite-water-rafting-page-2.html
+++ b/wwr/wite-water-rafting-page-2.html
@@ -30,7 +30,7 @@
             <div class = "river-grid">
 
                 <h2>Salmon River</h2>
-                <img src="images/salmon-river.jpg"
+                <img class="rivers" src="images/salmon-river.jpg"
                 <p></p>
                 <div class="button-box">
                     <a class ="book" href="rates.html">register</a>
