--- a/wwr/wite-water-rafting-page-2.html
+++ b/wwr/wite-water-rafting-page-2.html
@@ -30,14 +30,14 @@
             <div class = "river-grid">
 
                 <h2>Salmon River</h2>
-                <img class="rivers" src="images/salmon-river.jpg"
+                <img class="rivers" src="images/salmon-river.jpg" alt="image of salmon River">
                 <p></p>
                 <div class="button-box">
                     <a class ="book" href="rates.html">register</a>
                 </div>
 
                 <h2>Hells Canyon</h2>
-                <img src="images/hells Canyon.webp"
+                <img src="images/hells Canyon.webp" alt="image of hells canyon">
                 <p></p>
                 <div class="button-box">
                     <a class ="book" href="rates.html">Register</a>
